@startuml Maze
class Diamond {
}

class World {
}

class Computer {
}

class RandomComputer {
}

class BFSComputer {
}

class DFSComputer {
}

class UCSComputer {
}

class Player {
}

class CharacterAnimationManager {
}

class Text {
}

World *-- Diamond
CharacterAnimationManager *-- Player
Computer --> CharacterAnimationManager
CharacterAnimationManager ..> World
RandomComputer --|> Computer
BFSComputer --|> Computer
DFSComputer --|> Computer
UCSComputer --|> Computer
Text ..> CharacterAnimationManager
World ..> Computer
Computer ..> World
@enduml